updated instructions for starting git with local files

--- a/refresher.ipynb
+++ b/refresher.ipynb
@@ -5,6 +5,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Github\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initilizing Github\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If you start with github repo in the cloud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If you start with local files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git init # make the folder a git folder\n",
+    "git remote <sshurl> # connect it to a repo created in the cloud\n",
+    "git remote add origin <sshurl> # set the origin for the repo\n",
+    "git push --set-upstream origin master # set up the git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Terminal Commands\n"
    ]
   },
