updated initial instructions

--- a/refresher.ipynb
+++ b/refresher.ipynb
@@ -17,19 +17,19 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### If you start with github repo in the cloud"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# install git from https://git-scm.com/downloads\n",
+    "# configure github to generate ssh key and link it to your local machine\n",
+    "# https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent\n",
+    "\n",
+    "# in your command terminal setup the necessary admin\n",
+    "git config --global user.name <name> # set a name where your local changes are recorded to be identified\n",
+    "git config --global user.email <email@domain> # set an email where changes are recorded to be identified"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +44,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setup a folder you want to designate as a github repo\n",
+    "# go to terminal and navigate to the folder cd <folder path>\n",
     "git init # make the folder a git folder\n",
-    "git remote <sshurl> # connect it to a repo created in the cloud\n",
+    "# create a repo in github and copy the ssh url\n",
     "git remote add origin <sshurl> # set the origin for the repo\n",
-    "git push --set-upstream origin master # set up the git push"
+    "\n",
+    "# after adding some changes to your folder\n",
+    "git add . # git add all changes to commit\n",
+    "git commit # git commit the changes\n",
+    "git push --set-upstream origin master # set up the git push to github"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If you start with github repo in the cloud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# go to terminal and navigate to the Github folder\n",
+    "git clone <sshurl>"
    ]
   },
   {
@@ -64,7 +88,8 @@
    "source": [
     "1. To copy paste the current directory from VSC, just right click and select path\n",
     "2. option left/right to jump to the ends of terminal commands\n",
-    "3. ctrl+w to delete the whole line"
+    "3. ctrl+w to delete the whole line\n",
+    "4. cd to navigate to a folder"
    ]
   },
   {
@@ -72,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extension\n"
+    "# Extensions\n"
    ]
   },
   {
