Updated instructions for initilizing github

--- a/refresher.ipynb
+++ b/refresher.ipynb
@@ -28,7 +28,10 @@
     "\n",
     "# in your command terminal setup the necessary admin\n",
     "git config --global user.name <name> # set a name where your local changes are recorded to be identified\n",
-    "git config --global user.email <email@domain> # set an email where changes are recorded to be identified"
+    "git config --global user.email <email@domain> # set an email where changes are recorded to be identified\n",
+    "\n",
+    "# Make sure git commit points to your favourite editor\n",
+    "# when using VS Code: Shell Command: Install ‘code’ command in path → To use VSC as the default commit message text editor"
    ]
   },
   {
@@ -71,8 +74,28 @@
    "outputs": [],
    "source": [
     "# go to terminal and navigate to the Github folder\n",
-    "git clone <sshurl>"
+    "git clone <sshurl>\n",
+    "\n",
+    "# after adding some changes to your folder\n",
+    "git add . # git add all changes to commit\n",
+    "git commit # git commit the changes\n",
+    "git push --set-upstream origin master # set up the git push to github"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Github Commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
