Included explainer for copilot labs

--- a/adminrefresher.ipynb
+++ b/adminrefresher.ipynb
@@ -149,6 +149,27 @@
     "# import standard python libraries\n",
     "import os"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GIthub copilot labs\n",
+    "\n",
+    "# explains code for you on the sidebar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gitlens\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
